--- a/index.html
+++ b/index.html
@@ -14,15 +14,26 @@
     <header class="header">
       <div class="banner">
            <div class="banner-content">
-        <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+        <h3 class="banner-title">Let's make beautiful flowers a part of your life.</h3>
+            <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
             <button class="btn-primary">Shop Now</button>
               
         </div>
             <img class="banner-pic" src="images/pngwing 10.png" alt="">
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="deal">
+            <div class="deal-content">
+                <h2 class="deal-title">Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h2>
+                <p deal-desc>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+            <div>
+                <img class="deal-pic" src="images/pngwing 8.png" alt="">
+            </div>
+        </section>
+    </main>
     <footer></footer>
     
 </body>
