updated deal section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="deal">
             <div class="deal-content">
                 <h2 class="deal-title">Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h2>
-                <p deal-desc>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class=" deal-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <button class="btn-primary">Sign Up</button>
             </div>
             <div>
