added latest deal section

--- a/index.html
+++ b/index.html
@@ -33,8 +33,40 @@
                 <img class="deal-pic" src="images/pngwing 8.png" alt="">
             </div>
         </section>
+        <!-- instragram section -->
+
     </main>
-    <footer></footer>
+    <footer>
+        <section class="instra">
+            <h3 class="deal-title">
+                Instagram
+            </h3>
+            <p class="deal-desc">
+                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+            </p>
+            <div class="instra-img">
+            <img src="images/Flower 01.png" alt="">
+            <img src="images/Rectangle 4.png" alt="">
+            <img src="images/Rectangle 5.png" alt="">
+            <img src="images/Rectangle 6.png" alt="">
+        </div>
+        </section>
+        <section class="latest-deal">
+          <div>
+            <h3 class="deal-title" id="latest-deal-title">
+                Get The Latest Deals
+            </h3>
+            <p class="deal-desc" >
+                $30 coupon for first shopping
+            </p>
+        </div>
+        <div>
+            <input type="text" id="email" placeholder="Enter your email here...."> 
+        <button class="btn-primary">Subscribe</button>
+        </div>
+        </section>
+       
+    </footer>
     
 </body>
 </html>
