main footer done

--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
         <button class="btn-primary">Subscribe</button>
         </div>
         </section>
-       
+        <section class="main-footer">
+            <h3 class="name-of-shop"> <span class="text-primary" id="flower">Flower</span>Shop</h3>
+            <p class="footer-para">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+           <p class="web">@2020-2023, FlowerShop.com. All rights reserved.</p>
+
+        </section>
     </footer>
     
 </body>
