Updated my Shop

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/flower.css">
+    <script src="https://kit.fontawesome.com/c986751f84.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
       <div class="banner">
            <div class="banner-content">
-        <h3 class="banner-title">Let's make beautiful flowers a part of your life.</h3>
-            <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-            <button class="btn-primary">Shop Now</button>
+        <h6 class="banner-title">Let's make<br> beautiful flowers a<br> part of your life.</h6>
+            <p class="banner-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout. The point of using Lorem Ipsum is<br> that it has a more-or-less normal distribution of letters.</p>
+            <button class="btn-primary">
+                <i class="fa-solid fa-cart-shopping"></i> Shop Now</button>
               
         </div>
             <img class="banner-pic" src="images/pngwing 10.png" alt="">
@@ -26,8 +28,8 @@
         <section class="deal">
             <div class="deal-content">
                 <h2 class="deal-title">Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h2>
-                <p class=" deal-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                <button class="btn-primary">Sign Up</button>
+                <p class="deal-desc">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                <button class="btn-primary" id="sign-up"><i class="fa-solid fa-right-to-bracket"></i> Sign Up</button>
             </div>
             <div>
                 <img class="deal-pic" src="images/pngwing 8.png" alt="">
@@ -38,11 +40,11 @@
     </main>
     <footer>
         <section class="instra">
-            <h3 class="deal-title">
+            <h3 class="instra-title">
                 Instagram
             </h3>
-            <p class="deal-desc">
-                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+            <p class="deal-desc" id="instra-desc">
+                It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.
             </p>
             <div class="instra-img">
             <img src="images/Flower 01.png" alt="">
@@ -62,11 +64,11 @@
         </div>
         <div>
             <input type="text" id="email" placeholder="Enter your email here...."> 
-        <button class="btn-primary">Subscribe</button>
+        <button class="btn-primary" >Subscribe</button>
         </div>
         </section>
         <section class="main-footer">
-            <h3 class="name-of-shop"> <span class="text-primary" id="flower">Flower</span>Shop</h3>
+            <h3 class="name-of-shop"> <span class="text-primary" id="flower"> <i class="fa-solid fa-gifts"></i> Flower</span>Shop </h3>
             <p class="footer-para">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
            <p class="web">@2020-2023, FlowerShop.com. All rights reserved.</p>
 
